// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WeekViewRehearsalList renders a list of multiple rehearsals 1`] = `
<div
  className="ui bulleted list"
  role="list"
>
  <div
    className="item"
    data-value={undefined}
    onClick={[Function]}
    role="listitem"
  >
    12:00 - 14:30
  </div>
  <div
    className="item"
    data-value={undefined}
    onClick={[Function]}
    role="listitem"
  >
    14:30 - 16:00
  </div>
</div>
`;

exports[`WeekViewRehearsalList renders a list of one rehearsal 1`] = `
<div
  className="ui bulleted list"
  role="list"
>
  <div
    className="item"
    data-value={undefined}
    onClick={[Function]}
    role="listitem"
  >
    12:00 - 16:00
  </div>
</div>
`;

exports[`WeekViewRehearsalList renders nothing if there are no rehearsals 1`] = `null`;
